--- a/index.html
+++ b/index.html
@@ -546,11 +546,11 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
       <i class="lni lni-chevron-up"></i>
     </a>
 <div id="popup">
-  <h2>Popup Window</h2>
-  <p>This is the content of the popup window.</p>
-  <button id="button-1">Button 1</button>
-  <button id="button-2">Button 2</button>
-  <span id="close-popup">X</span>
+  <button id="close-popup">&times;</button>
+  <h2>Contact Office</h2>
+  <p>Select A Number To Continue</p>
+  <button id="button-1">Phone 1</button>
+  <button id="button-2">Phone 2</button>
 </div>
 
     <!-- ======== JS here ======== -->
