--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     left: 50%;
     top: 50%;
     border-radius: 8px;
-    font-family: "Poppins",sans-serif;
+    font-family: "Poppins";
     display: none; 
     text-align: center;
 }
@@ -493,7 +493,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                     </a>
                   </li>
                   <li>                
-		    <a id="popup-link" ondblclick="">
+		    <a id="popup-link">
                       <i class="lni lni-phone"></i>
                     </a>                   
                   </li>                 
@@ -562,11 +562,11 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
     var popup = document.getElementById('popup');
     var closePopup = document.getElementById('close-popup');
 
-    popupLink.addEventListener('click', function() {
+    popup-link.addEventListener('click', function() {
     popup.style.display = 'block';
     });
 
-    closePopup.addEventListener('click', function() {
+    close-popup.addEventListener('click', function() {
     popup.style.display = 'none';
     });
     </script>
