--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                   </a>
                 </div>
                 <p class="desc mb-30 text-white">
-                 Enlighting Minds , Illuminating Futures
+                 Enlighting Minds , Illuminating Futures 
                   -Candle The Institute Of science
                 </p>
                 <ul class="socials">
@@ -545,29 +545,30 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
     <a href="#" class="scroll-top btn-hover">
       <i class="lni lni-chevron-up"></i>
     </a>
-<div id="popup">
-  <button id="close-popup">&times;</button>
-  <h2>Contact Office</h2>
-  <p>Select A Number To Continue</p>
-  <button id="button-1">Phone 1</button>
-  <button id="button-2">Phone 2</button>
-</div>
+	  
+      <div class="popup">
+        <button id="#close">&times;</button>
+        <h2>Contact Office</h2>
+        <p>Select A Number To Continue</p>
+ 	<button id="button-1">Phone 1</button>
+	<button id="button-2">Phone 2</button>
+      </div>
 
     <!-- ======== JS here ======== -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/main.js"></script>
     <script>
-    var popupLink = document.getElementById('popup-link');
-    var popup = document.getElementById('popup');
-    var closePopup = document.getElementById('close-popup');
-
-    popup-link.addEventListener('click', function() {
-    popup.style.display = 'block';
+    window.addEventListener("click", function(){
+        setTimeout(
+            function open(event){
+                document.querySelector(".popup").style.display = "block";
+            },
+            2000 
+        )
     });
-
-    close-popup.addEventListener('click', function() {
-    popup.style.display = 'none';
+    document.querySelector(“#close”).addEventListener(“click”, function(){
+        document.querySelector(“.popup”).style.display = “none”;
     });
     </script>
   
