--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
           <div class="col-lg-6">
             <div class="hero-content">
               <h1 class="wow fadeInUp" data-wow-delay=".4s">
-                Your using Web version of Candle
-              </h1> 
+		Welcome To The Web Of Candle
+	      </h1> 
               <p class="wow fadeInUp" data-wow-delay=".6s">
                 Download our application for all free and premium features
               </p>
@@ -547,10 +547,10 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
     </a>
 	  
       <div class="popup">
-        <button id="#close">&times;</button>
+        <button id="close-popup">&times;</button>
         <h2>Contact Office</h2>
         <p>Select A Number To Continue</p>
- 	<button id="button-1">Phone 1</button>
+ 	<button href="tel:919037140240" id="button-1">Phone 1</button>
 	<button id="button-2">Phone 2</button>
       </div>
 
@@ -559,6 +559,13 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
     <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/main.js"></script>
     <script>
+    var popupLink = document.getElementById('popup-link');
+    var popup = document.getElementById('popup');
+    var closePopup = document.getElementById('close-popup');
+
+    popupLink.addEventListener('click', function() {
+      popup.style.display = 'block';
+    });
     window.addEventListener("click", function(){
         setTimeout(
             function open(event){
@@ -573,7 +580,18 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
     </script>
   
 
-    
+    var popupLink = document.getElementById('popup-link');
+var popup = document.getElementById('popup');
+var closePopup = document.getElementById('close-popup');
+
+popupLink.addEventListener('click', function() {
+  popup.style.display = 'block';
+});
+
+closePopup.addEventListener('click', function() {
+  popup.style.display = 'none';
+});
+
     
   </body>
 </html>
