--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                     </a>
                   </li>
                   <li>                
-		    <a id="popup-link">
+		   <a id="popup-link">
                       <i class="lni lni-phone"></i>
                     </a>                   
                   </li>                 
@@ -545,53 +545,29 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
     <a href="#" class="scroll-top btn-hover">
       <i class="lni lni-chevron-up"></i>
     </a>
-	  
-      <div class="popup">
-        <button id="close-popup">&times;</button>
-        <h2>Contact Office</h2>
-        <p>Select A Number To Continue</p>
- 	<button href="tel:919037140240" id="button-1">Phone 1</button>
-	<button id="button-2">Phone 2</button>
-      </div>
-
+<div id="popup">
+  <button id="close-popup">&times;</button>	
+  <h2>Contact Office</h2>
+  <p>Select A Number To Continue</p>
+  <button href="tel:919037140240" id="button-1">Phone 1</button>
+  <button id="button-2">Phone 2</button>
+</div>
     <!-- ======== JS here ======== -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/main.js"></script>
     <script>
-    var popupLink = document.getElementById('popup-link');
-    var popup = document.getElementById('popup');
-    var closePopup = document.getElementById('close-popup');
+   var popupLink = document.getElementById('popup-link');
+   var popup = document.getElementById('popup');
+   var closePopup = document.getElementById('close-popup');
 
-    popupLink.addEventListener('click', function() {
-      popup.style.display = 'block';
-    });
-    window.addEventListener("click", function(){
-        setTimeout(
-            function open(event){
-                document.querySelector(".popup").style.display = "block";
-            },
-            2000 
-        )
-    });
-    document.querySelector(“#close”).addEventListener(“click”, function(){
-        document.querySelector(“.popup”).style.display = “none”;
-    });
-    </script>
-  
+   popupLink.addEventListener('click', function() {
+     popup.style.display = 'block';
+   });
 
-    var popupLink = document.getElementById('popup-link');
-var popup = document.getElementById('popup');
-var closePopup = document.getElementById('close-popup');
-
-popupLink.addEventListener('click', function() {
-  popup.style.display = 'block';
-});
-
-closePopup.addEventListener('click', function() {
-  popup.style.display = 'none';
-});
-
-    
+   closePopup.addEventListener('click', function() {
+      popup.style.display = 'none';
+   });
+    </script>    
   </body>
 </html>
