--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="assets/css/lineicons.css" />
     <link rel="stylesheet" href="assets/css/animate.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
+<style>
 #popup {
   display: none;
   position: fixed;
@@ -28,8 +29,7 @@
   padding: 20px;
   border: 1px solid black;
 }
-
-  </style>
+</style>
 	  
 	  
   </head>
@@ -516,7 +516,6 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                   <li><a href="javascript:void(0)">How it works</a></li>
                   <li><a href="javascript:void(0)">Privacy policy</a></li>
                   <li><a href="javascript:void(0)">Terms of service</a></li>
-                  <li><a href="javascript:void(0)">Refund policy</a></li>
                 </ul>
               </div>
             </div>
@@ -544,11 +543,10 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 <div id="popup">
   <h2>Popup Window</h2>
   <p>This is the content of the popup window.</p>
-  <button id="button-1">Button 1</button>
+  <button onclick="windo.open('tel:919037140240')" id="button-1">Button 1</button>
   <button id="button-2">Button 2</button>
   <span id="close-popup">&times;</span>
 </div>
-
     <!-- ======== JS here ======== -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/wow.min.js"></script>
