--- a/index.html
+++ b/index.html
@@ -19,16 +19,7 @@
     <link rel="stylesheet" href="assets/css/animate.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
 <style>
-#popup {
-  display: none;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: white;
-  padding: 20px;
-  border: 1px solid black;
-}
+
 </style>
  </head>
   <body>
@@ -539,11 +530,12 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
       <i class="lni lni-chevron-up"></i>
     </a>
 <div id="popup">
-  <h2>Popup Window</h2>
-  <p>This is the content of the popup window.</p>
-  <button onclick="windo.open('tel:919037140240')" id="button-1">Button 1</button>
-  <button id="button-2">Button 2</button>
+  <h2>Contact Office</h2>
   <span id="close-popup">&times;</span>
+  <p>Select A Number To Contact Directly. If You Can't Reach Try With Other Number</p>
+  <button onclick="window.open('tel:919037140240');" id="button-1">Button 1</button>
+  <button id="button-2">Button 2</button>
+
 </div>
     <!-- ======== JS here ======== -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
