--- a/index.html
+++ b/index.html
@@ -529,31 +529,30 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
     <a href="#" class="scroll-top btn-hover">
       <i class="lni lni-chevron-up"></i>
     </a>
-<div id="popup">
-  <h2>Contact Office</h2>
-  <span id="close-popup">&times;</span>
-  <p>Select A Number To Contact Directly. If You Can't Reach Try With Other Number</p>
-  <button onclick="window.open('tel:919037140240');" id="button-1">Button 1</button>
-  <button id="button-2">Button 2</button>
-
-</div>
-    <!-- ======== JS here ======== -->
+    <div class="popup">
+        <button id="popup-close">&times;</button>
+        <h2>Contact Office</h2>
+        <p>Please Choose A Number To Proceed. If You Are Unable To Connect Using One Number, Please Try With The Other Number</p>
+        <a id="popup-a">Phone 1</a> <a id="popup-a">Phone 2</a>
+    </div>
+	  <! === JS here ======== -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/main.js"></script>
-    <script>
-   var popupLink = document.getElementById('popup-link');
-   var popup = document.getElementById('popup');
-   var closePopup = document.getElementById('close-popup');
+    <script type="text/javascript">
+window.addEventListener("click", function(){
+    setTimeout(
+        function open(event){
+            document.querySelector(".popup").style.display = "block";
+        },
+        2000 
+    )
+});
 
-   popupLink.addEventListener('click', function() {
-     popup.style.display = 'block';
-   });
 
-   closePopup.addEventListener('click', function() {
-     popup.style.display = 'none';
-   });
-
-    </script>    
+document.querySelector("#popup-close").addEventListener("click", function(){
+    document.querySelector(".popup").style.display = "none";
+});
+    </script>   
   </body>
 </html>
