--- a/index.html
+++ b/index.html
@@ -531,9 +531,10 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
     </a>
     <div class="popup">
         <button id="popup-close">&times;</button>
-        <h2>Contact Office</h2>
-        <p>Please Choose A Number To Proceed. If You Are Unable To Connect Using One Number, Please Try With The Other Number</p>
-        <a id="popup-a">Phone 1</a> <a id="popup-a">Phone 2</a>
+        <h2 id="popup-h2">Contact Office</h2>
+        <p id="popup-p">Please Choose A Number To Proceed. If You Are Unable To Connect Using One Number, Please Try With The Other Number</p>
+        <a id="popup-a" href="jvascript:void(0)" onclick="window.open('tel:919037140240');">Phone 1</a>
+        <a id="popup-a">Phone 2</a>
     </div>
 	  <! === JS here ======== -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
