--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
         <button id="popup-close">&times;</button>
         <h2>Contact Office</h2>
         <p>Please Choose A Number To Proceed. If You Are Unable To Connect Using One Number, Please Try With The Other Number</p>
-        <a id="popup-a">Phone 1</a> <a id="popup-a">Phone 2</a>
+        <a id="popup-a" href="tel:919037140240">Phone 1</a> <a id="popup-a">Phone 2</a>
     </div>
 	  <! === JS here ======== -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
@@ -544,9 +544,7 @@ window.addEventListener("click", function(){
     function open(event){
         document.querySelector(".popup").style.display = "block";
     },
-       
 });
-
 
 document.querySelector("#popup-close").addEventListener("click", function(){
     document.querySelector(".popup").style.display = "none";
