--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                     </a>
                   </li>
                   <li>                
-		   <a id="popup-link">
+		   <a href="javascript:void(0)" id="butt">
                       <i class="lni lni-phone"></i>
                     </a>                   
                   </li>                 
@@ -529,26 +529,29 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
     <a href="#" class="scroll-top btn-hover">
       <i class="lni lni-chevron-up"></i>
     </a>
+
     <div class="popup">
-        <button id="popup-close">&times;</button>
+        <button class="butt-popup" id="close">&times;</button>
         <h2>Contact Office</h2>
-        <p>Please Choose A Number To Proceed. If You Are Unable To Connect Using One Number, Please Try With The Other Number</p>
-        <a id="popup-a" href="tel:919037140240">Phone 1</a> <a id="popup-a">Phone 2</a>
-    </div>
+        <p>
+            Please Choose A Number To Proceed. If You Are Unable To Connect Using One Number, Please Try With The Other Number        </p>
+        <a class="link-popup"  href="tel:919037140240">Phone 1Phone 1 </a>
+        <a class="link-popup"  href="tel:919037240140">Phone 2</a>
+    </div>	  
+	  
+	  
 	  <! === JS here ======== -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/main.js"></script>
-    <script type="text/javascript">
-window.addEventListener("click", function(){
-    function open(event){
-        document.querySelector(".popup").style.display = "block";
-    },
+   <script type="text/javascript">
+document.querySelector("#butt").addEventListener("click", function(){
+    document.querySelector(".popup").style.display = "block";
 });
 
-document.querySelector("#popup-close").addEventListener("click", function(){
+document.querySelector("#close").addEventListener("click", function(){
     document.querySelector(".popup").style.display = "none";
 });
-    </script>   
+    </script>  
   </body>
 </html>
