--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <i class="lni lni-layout"></i>
               </div>
               <div class="content">
-                <h3>Experienced Faculties </h3>
+                <h3>Experienced Faculties </h3>Phone 1 
                 <p>
                   Our program features highly experienced and knowledgeable instructors who specialize in each subject, ensuring your child receives top-notch instruction.
                 </p>
@@ -530,13 +530,13 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
       <i class="lni lni-chevron-up"></i>
     </a>
 
-    <div class="popup">
-        <button class="butt-popup" id="close">&times;</button>
+    <div id="popup">
+        <buttonid="close">&times;</button>
         <h2>Contact Office</h2>
         <p>
             Please Choose A Number To Proceed. If You Are Unable To Connect Using One Number, Please Try With The Other Number        </p>
-        <a class="link-popup"  href="tel:919037140240">Phone 1Phone 1 </a>
-        <a class="link-popup"  href="tel:919037240140">Phone 2</a>
+        <a class="link-popup"  href="tel:919037140240"> Phone 1 </a>
+        <a class="link-popup"  href="tel:919037240140"> Phone 2 </a>
     </div>	  
 	  
 	  
@@ -546,11 +546,11 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
     <script src="assets/js/main.js"></script>
    <script type="text/javascript">
 document.querySelector("#butt").addEventListener("click", function(){
-    document.querySelector(".popup").style.display = "block";
+    document.querySelector("#popup").style.display = "block";
 });
 
 document.querySelector("#close").addEventListener("click", function(){
-    document.querySelector(".popup").style.display = "none";
+    document.querySelector("#popup").style.display = "none";
 });
     </script>  
   </body>
