--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
         <h2 class="popuph2">Contact Office</h2>
         <p class="popupp">
             Please Choose A Number To Proceed. If You Are Unable To Connect Using One Number, Please Try With The Other Number        </p>
-        <a class="popuplink"  href="tel:919037140240">Phone 1Phone 1 </a>
+        <a class="popuplink"  href="tel:919037140240">Phone 1 </a>
         <a class="popuplink"  href="tel:919037240140">Phone 2</a>
     </div>	  
 	  
