--- a/index.html
+++ b/index.html
@@ -477,10 +477,9 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                       <i class="lni lni-whatsapp"></i>
                     </a>
                   </li>
-                  <li>                
-		   <a href="javascript:void(0)" id="">
-                      <i class="lni lni-phone"></i>
-                    </a>                   
+                  <li>           
+		   <button class="popupbutt" id="butt">&#9990;
+                    </button>                   
                   </li>                 
                 </ul>
               </div>
@@ -529,8 +528,6 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
     <a href="#" class="scroll-top btn-hover">
       <i class="lni lni-chevron-up"></i>
     </a>
-
-    <div><button class="popupbutt" id="butt">&times;</button></div>
     <div class="popup">
         <button class="popupbutt" id="close">&times;</button>
         <h2 class="popuph2">Contact Office</h2>
