--- a/index.html
+++ b/index.html
@@ -477,10 +477,14 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                       <i class="lni lni-whatsapp"></i>
                     </a>
                   </li>
-                  <li>           
-		   <button class="popupbutt" id="butt"><i class="lni lni-phone"></i>
-                    </button>                   
-                  </li>                 
+                   <li><a href="jvascript:void(0)" onclick="window.open('tel:919037140240')">
+                      <i class="lni lni-phone"></i>
+                    </a>
+                  </li>
+		 <li><a href="jvascript:void(0)" onclick="window.open('tel:919037140240')">
+                      <i class="lni lni-phone"></i>
+                    </a>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -542,15 +546,5 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/main.js"></script>
-    <script type="text/javascript">
-document.querySelector("#butt").addEventListener("click", function(){
-    document.querySelector(".popup").style.display = "block";
-});
-
-
-document.querySelector("#close").addEventListener("click", function(){
-    document.querySelector(".popup").style.display = "none";
-});
-    </script>
   </body>
 </html>
