--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             <div class="col-lg-12">
               <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="index.html">
-                  <img src="assets/img/logo/logo.png" alt="Logo" />
+                  <img src="assets/img/logo/20230511_195701.svg
+" alt="Logo" />
                 </a>
                 <button
                   class="navbar-toggler"
