--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                 <div class="content">
                   <h3>Expierienced Tutors</h3>
                   <p>
-                   Experienced tutors in tuition classes are subject experts who can share specialized knowledge & enhance student's understandingSS
+                   Experienced tutors in tuition cthe__angel_s/lasses are subject experts who can share specialized knowledge & enhance student's understandingSS
                   </p>
                 </div>
               </div>
@@ -289,7 +289,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
       </div>
     </section>
     <!-- ======== feature-section end ======== -->
-
+<div id="abou">
     <!-- ======== about-section start ======== -->
     <section id="about" class="about-section pt-150">
       <div class="container">
@@ -411,7 +411,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
       </div>
     </section>
     <!-- ======== about2-section end ======== -->
-
+</div>
 
 
     <!-- ======== subscribe-section start ======== -->
