--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="row align-items-center">
             <div class="col-lg-12">
               <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="#">
                   <img src="assets/img/logo/logo-1.svg
 " alt="Logo" />
                 </a>
