--- a/index.html
+++ b/index.html
@@ -421,10 +421,9 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
           <div class="row align-items-center">
             <div class="col-xl-6 col-lg-7">
               <div class="section-title mb-15">
-                <h2 class="text-white mb-25">Subscribe Our Newsletter</h2>
+                <h2 class="text-white mb-25">Join Our Broadcast Group</h2>
                 <p class="text-white pr-5">
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  diam nonumy eirmod tempor
+                  Enter Your Details To Join Our Broadcast Group And Know More
                 </p>
               </div>
             </div>
