--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                       <a class="page-scroll" href="#why">Why Us</a>
                     </li>
 		    <li class="nav-item">
-                      <a class="page-scroll" href="#about">About</a>
+                      <a class="page-scroll" href="#abou">About</a>
                     </li>
                   </ul>
                 </div>
