--- a/index.html
+++ b/index.html
@@ -430,10 +430,12 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
             <div class="col-xl-6 col-lg-5">
               <form action="#" class="subscribe-form">
                 <input
-                  type="email"
-                  name="subs-email"
-                  id="subs-email"
-                  placeholder="Your Email"
+                  type="tel"
+                  name="subs-phone"
+                  id="subs-phone"
+                  placeholder="Your 10 Digit Whatsapp No."
+		  pattern="[0-9]{10}"
+		  required
                 />
                 <button type="submit" class="main-btn btn-hover">
                   Subscribe
