--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                   type="tel"
                   name="subs-phone"
                   id="subs-phone"
-                  placeholder="Your 10 Digit Whatsapp No."
+                  placeholder="Your 10 Digit Whatsapp No.(eg:-9878767656)"
 		  pattern="[0-9]{10}"
 		  required
                 />
