--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
               <div class="section-title mb-15">
                 <h2 class="text-white mb-25">Join Our Broadcast Group</h2>
                 <p class="text-white pr-5">
-                  Enter Your Details To Join Our Broadcast Group And Know More
+                  Enter Your Whatsapp Number To Join Our Broadcast Group And Know More
                 </p>
               </div>
             </div>
@@ -433,7 +433,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                   type="tel"
                   name="subs-phone"
                   id="subs-phone"
-                  placeholder="Your 10 Digit Whatsapp No.(eg:-9878767656)"
+                  placeholder="Your 10 Digit No.(eg:-9878767656)"
 		  pattern="[0-9]{10}"
 		  required
                 />
