--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <i class="lni lni-bootstrap"></i>
               </div>
               <div class="content">
-                <h3>Advanced Classrooms</h3>
+                <h3 id="classrooms">Advanced Classrooms</h3>
                 <p>
                  We offer top-notch education for your child in a comfortable, air-conditioned learning environment that utilizes the latest technological advancements.
                 </p>
@@ -163,7 +163,7 @@
                 <i class="lni lni-layout"></i>
               </div>
               <div class="content">
-                <h3>Experienced Faculties </h3>Phone 1 
+                <h3 id="faculties">Experienced Faculties</h3> 
                 <p>
                   Our program features highly experienced and knowledgeable instructors who specialize in each subject, ensuring your child receives top-notch instruction.
                 </p>
@@ -176,7 +176,7 @@
                 <i class="lni lni-coffee-cup"></i>
               </div>
               <div class="content">
-                <h3>Simple Ways to Learn</h3>
+                <h3 id="simple">Simple Ways to Learn</h3>
                 <p>
                   Our program emphasizes easy-to-follow teaching methods and techniques, making learning a straightforward and enjoyable experience for students.
                 </p>
@@ -423,7 +423,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
               <div class="section-title mb-15">
                 <h2 class="text-white mb-25">Join Our Broadcast Group</h2>
                 <p class="text-white pr-5">
-                  Enter Your Details To Join Our Broadcast Group And Know More
+                  Enter Your Whatsapp Number To Join Our Broadcast Group And Know More
                 </p>
               </div>
             </div>
@@ -433,7 +433,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                   type="tel"
                   name="subs-phone"
                   id="subs-phone"
-                  placeholder="Your 10 Digit Whatsapp No.(eg:-9878767656)"
+                  placeholder="Your 10 Digit No.(eg:-9878767656)"
 		  pattern="[0-9]{10}"
 		  required
                 />
@@ -507,9 +507,9 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
               <div class="footer-widget">
                 <h3>Features</h3>
                 <ul class="links">
-                  <li><a href="javascript:void(0)">How it works</a></li>
-                  <li><a href="javascript:void(0)">Privacy policy</a></li>
-                  <li><a href="javascript:void(0)">Terms of service</a></li>
+                  <li><a href="javascript:void(0)" onclick="href='#classroms'">Classrooms</a></li>
+                  <li><a href="javascript:void(0)" onclick="href='#faculties'">Faculties</a></li>
+                  <li><a href="javascript:void(0)" onclick="href='#simple'">Simple</a></li>
                 </ul>
               </div>
             </div>
