--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
             <div class="col-lg-4 col-md-6">
               <div class="single-feature-extended">
                 <div class="icon">
-                  <i class="lni lni-grid-alt"></i>
+                  <i class="lni lni-book"></i>
                 </div>
                 <div class="content">
                   <h3>Extra Learning Aids</h3>
