--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                 <div class="content">
                   <h3>Expierienced Tutors</h3>
                   <p>
-                   Experienced tutors in tuition cthe__angel_s/lasses are subject experts who can share specialized knowledge & enhance student's understandingSS
+                   Experienced tutors in tuition classes are subject experts who can share specialized knowledge & enhance student's understanding
                   </p>
                 </div>
               </div>
@@ -222,7 +222,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
             <div class="col-lg-4 col-md-6">
               <div class="single-feature-extended">
                 <div class="icon">
-                  <i class="lni lni-leaf"></i>
+                  <i class="lni lni-question-circle"></i>
                 </div>
                 <div class="content">
                   <h3>Regular Assessments</h3>
