--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <div class="col-lg-4 col-md-8 col-sm-10">
             <div class="single-feature">
               <div class="icon">
-                <i class="lni lni-bootstrap"></i>
+                <i class="lni lni-display"></i>
               </div>
               <div class="content">
                 <h3 id="classrooms">Advanced Classrooms</h3>
