--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           </div>
           <div class="col-lg-6">
             <div class="hero-img wow fadeInUp" data-wow-delay=".5s">
-              <img src="assets/img/hero/hero-img.png" alt="" />
+              <img src="assets/img/hero/hero-img.png" alt="App ScreenShots" />
             </div>
           </div>
         </div>
@@ -222,7 +222,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
             <div class="col-lg-4 col-md-6">
               <div class="single-feature-extended">
                 <div class="icon">
-                  <i class="lni lni-question-circle"></i>
+                  <i class="lni lni-quara"></i>
                 </div>
                 <div class="content">
                   <h3>Regular Assessments</h3>
