--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
             <div class="col-lg-4 col-md-6">
               <div class="single-feature-extended">
                 <div class="icon">
-                  <i class="lni lni-quara"></i>
+                  <i class="lni lni-quora"></i>
                 </div>
                 <div class="content">
                   <h3>Regular Assessments</h3>
