--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
             <div class="col-lg-4 col-md-6">
               <div class="single-feature-extended">
                 <div class="icon">
-                  <i class="lni lni-layers"></i>
+                  <i class="lni lni-question-circle"></i>
                 </div>
                 <div class="content">
                   <h3> Extra practice & reinforcement</h3>
