--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
               </div>
             </div>
             <div class="col-xl-6 col-lg-5">
-              <form action="#" class="subscribe-form">
+              <form name="subs-phone" class="subscribe-form" method="post" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]);?>">
                 <input
                   type="tel"
                   name="subs-phone"
