--- a/index.html
+++ b/index.html
@@ -539,5 +539,6 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <?php src="assets/php/main.php" ?>
   </body>
 </html>
