Update and rename index.html to index.html

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                 <h3>About Creators</h3>
                 <ul class="links">
                   <li><a href="jvascript:void(0)">Follow Us</a></li>
-                  <li><a href="jvascript:void(0)" onclick="window.open('https://www.texidomeg.ml')">Official website</a></li>
+                  <li><a href="jvascript:void(0)" onclick="window.open('https://texidomeg.ml')">Official website</a></li>
                   <li><a href="jvascript:void(0)">Contact Us</a></li>
                 </ul>
               </div>
