--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
               </div>
             </div>
             <div class="col-xl-6 col-lg-5">
-              <form name="phone" class="subscribe-form" method="post" action="#">
+              <form name="phone" class="subscribe-form" method="post" action="submit.php">
                 <input
 		  name="subs-phone"
 		  id="subs-phone"
