--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
               <div class="footer-widget">
                 <h3>Features</h3>
                 <ul class="links">
-                  <li><a href="javascript:void(0)" onclick="href='#classroms'">Classrooms</a></li>
+                  <li><a href="javascript:void(0)" onclick="href='#classrooms'">Classrooms</a></li>
                   <li><a href="javascript:void(0)" onclick="href='#faculties'">Faculties</a></li>
                   <li><a href="javascript:void(0)" onclick="href='#simple'">Simple</a></li>
                 </ul>
