--- a/index.html
+++ b/index.html
@@ -466,6 +466,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                 <button type="submit" class="main-btn btn-hover">
                   Subscribe
                 </button>
+	         <input type="submit" value="Submit">
               </form>
             </div>
           </div>
