--- a/index.html
+++ b/index.html
@@ -463,11 +463,10 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 		  pattern="[0-9]{10}"
 		  required
                 />
-                <button type="submit" class="main-btn btn-hover">
+                <button type="submit" value="Submit" class="main-btn btn-hover">
                   Subscribe
                 </button>
-	         <input type="submit" value="Submit">
-              </form>
+	      </form>
             </div>
           </div>
         </div>
