--- a/assets/thank_you.html
+++ b/assets/thank_you.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Candle - The Institute For science</title>
-    <meta name="description" content="The Leading PlusOne,PlusTwo Entrance Oriented Tution Centre In Kerala" />
+    <title>Successfully Submitted</title>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
       rel="shortcut icon"
@@ -85,7 +84,7 @@ function test_input($data) {
             <div class="col-lg-12">
               <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">
-                  <img src="assets/img/logo/logo-1.svg
+                  <img src="img/logo/logo-1.svg
 " alt="Logo" />
                 </a>
                 <button
@@ -141,7 +140,7 @@ function test_input($data) {
           <div class="col-lg-6">
             <div class="hero-content">
               <h1 class="wow fadeInUp" data-wow-delay=".4s">
-		Welcome To The Web Of Candle
+		You Have SuccessFully Submitted
 	      </h1> 
               <p class="wow fadeInUp" data-wow-delay=".6s">
                 Download our application for all free and premium features
@@ -155,11 +154,6 @@ function test_input($data) {
               <a href="#features" class="scroll-bottom">
                 <i class="lni lni-arrow-down"></i
               ></a>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="hero-img wow fadeInUp" data-wow-delay=".5s">
-              <img src="assets/img/hero/hero-img.png" alt="App ScreenShots" />
             </div>
           </div>
         </div>
