--- a/assets/thank_you.html
+++ b/assets/thank_you.html
@@ -87,19 +87,9 @@ function test_input($data) {
                   <img src="img/logo/logo-1.svg
 " alt="Logo" />
                 </a>
-                <button
-                  class="navbar-toggler"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#navbarSupportedContent"
-                  aria-controls="navbarSupportedContent"
-                  aria-expanded="false"
-                  aria-label="Toggle navigation"
-                >
-                  <span class="toggler-icon"></span>
-                  <span class="toggler-icon"></span>
-                  <span class="toggler-icon"></span>
-                </button>
+                <li class="nav-item">
+                      <a class="page-scroll active" href="#home">Home</a>
+                </li>
 
                 </div>
                 <!-- navbar collapse -->
@@ -220,7 +210,7 @@ function test_input($data) {
             </div>
    
 
-            <div class="col-xl-3 col-lg-3 col-md-6">
+            <div class="col-xl-4 col-lg-4 col-md-6">
               <div class="footer-widget">
                 <h3>About Creators</h3>
                 <ul class="links">
