--- a/assets/thank_you.html
+++ b/assets/thank_you.html
@@ -109,7 +109,7 @@ function test_input($data) {
           <div class="col-lg-6">
             <div class="hero-content">
               <h1 class="wow fadeInUp" data-wow-delay=".4s">
-		You Have SuccessFully Submitted
+		You Have Successfully Submitted
 	      </h1> 
               <p class="wow fadeInUp" data-wow-delay=".6s">
                 Download our application for all free and premium features
