--- a/index.html
+++ b/index.html
@@ -448,12 +448,13 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
           <div class="row align-items-center">
             <div class="col-xl-6 col-lg-7">
               <div class="section-title mb-15">
-                <h2 class="text-white mb-25">Join Our Broadcast Group</h2>
+                <h2 class="text-white mb-25">Request To Join Our Broadcast Group</h2>
                 <p class="text-white pr-5">
-                  Enter Your Whatsapp Number To Join Our Broadcast Group And Know More
+                  Enter Your Whatsapp Number, E-Mail Id And Feedback(Optinal) To Join Our Broadcast Group And Know More
                 </p>
               </div>
             </div>
+		  
             <div class="col-xl-6 col-lg-5">
               <form name="phone" class="subscribe-form" method="post" action="submit.php">
                 <input
@@ -463,6 +464,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 		  pattern="[0-9]{10}"
 		  required
                 />
+		
                 <button type="submit" value="Submit" class="main-btn btn-hover">
                   Subscribe
                 </button>
