--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
 // define variables and set to empty values
-$nameErr = $mailErr = $phoneErr = "";
+$nameErr = $mailErr = "";
 $name = $mail = $phone = $feedback = "";
 
 if ($_SERVER["REQUEST_METHOD"] == "POST") {
@@ -399,7 +399,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
       <div class="container">
         <div class="row align-items-center">
           <div class="col-xl-6 col-lg-6">
-            <div class="about-content">
+            <div class="about-content"> $phoneErr = 
               <div class="section-title mb-30">
                 <h2 class="mb-25 wow fadeInUp" data-wow-delay=".2s">
                   Discover Our Unique
@@ -475,7 +475,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
               <div class="section-title mb-15">
                 <h2 class="text-white mb-25">Request To Join Our Broadcast Group</h2>
                 <p class="text-white pr-5">
-                  Enter Your Whatsapp Number, E-Mail Id And Feedback(Optinal) To Join Our Broadcast Group And Know More
+                  Enter Your Whatsapp Number,Name, E-Mail Id And Feedback(Optinal) To Join Our Broadcast Group And Know More
                 </p>
               </div>
             </div>
@@ -489,12 +489,12 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 		  pattern="[0-9]{10}"
 		  required
                 />
-		
+	    </div>	
                 <button type="submit" value="Submit" class="main-btn btn-hover">
                   Subscribe
                 </button>
 	      </form>
-            </div>
+            
           </div>
         </div>
       </div>
