--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ function test_input($data) {
                     </li>
                   </ul>
                 </div>
-                <!-- navbar collapse -->
+                <!-- navbar collapse -->edit
               </nav>
               <!-- navbar -->
             </div>
@@ -481,8 +481,9 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
             </div>
 		  
             <div class="col-xl-6 col-lg-5">
-              <form name="phone" class="subscribe-form" method="post" action="submit.php">
+              <form  class="subscribe-form" method="post" action="submit.php">
                 <input
+		  name="phone"
 		  id="subs-phone"
                   type="tel"
                   placeholder="Your 10 Digit No(eg:9037140240)"
@@ -490,9 +491,11 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 		  required
                 />
 	    </div>	
+	    <div class="col-xl-6 col-lg-5">
                 <button type="submit" value="Submit" class="main-btn btn-hover">
                   Subscribe
                 </button>
+   	    </div>	
 	      </form>
             
           </div>
