--- a/index.html
+++ b/index.html
@@ -491,11 +491,13 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 		  required
                 />
 	    </div>	
-	    <div class="col-xl-6 col-lg-5">
+	   <div class="col-xl-6 col-lg-5">
+	     <div class="subscribe-form">
                 <button type="submit" value="Submit" class="main-btn btn-hover">
                   Subscribe
                 </button>
-   	    </div>	
+	     </div>
+   	   </div>	
 	      </form>
             
           </div>
