--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ function test_input($data) {
                     </li>
                   </ul>
                 </div>
-                <!-- navbar collapse -->edit
+                <!-- navbar collapse -->
               </nav>
               <!-- navbar -->
             </div>
