--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />ip r
+
     <title>Candle - The Institute For science</title>
     <meta name="description" content="The Leading PlusOne,PlusTwo Entrance Oriented Tution Centre In Kerala" />
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -497,12 +498,13 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 		  pattern="[0-9]{10}"
 		  required
                 />
+		      <br />
 		<input
 		  placeholder="Enter Your Name"
 		  type="text"
 		  name="name"
 		/>
-  	  <span class="error">*
+  	  <span class="error"><br />
 	  <?php echo $nameErr;?></span>
   
 		<input 
@@ -510,7 +512,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 		  name="mail"
 		  placeholder="Enter Your Email"     
 	        />
- 	   <span class="error">*
+ 	   <span class="error"><br />
 	   <?php echo $mailErr; ?></span>	      
 	    </div>	
 	   <input
