--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />ip r
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
 
     <title>Candle - The Institute For science</title>
     <meta name="description" content="The Leading PlusOne,PlusTwo Entrance Oriented Tution Centre In Kerala" />
