--- a/index.html
+++ b/index.html
@@ -118,21 +118,7 @@
           <div class="col-lg-6">
             <div class="hero-content">
               <h1 class="wow fadeInUp" data-wow-delay=".4s">
-	 $servername = "localhost";
-28
-  $username = "muhsin";
-29
-  $password = "Bsnl@3237";
-30
-  $database = "candle";
-31
-// Create connection
-32
-  $conn = new mysqli($localhost, $muhsin, $Bsnl@3237, $candle);
-33
-​
-34
-	Welcome To The Web Of Candle
+		Welcome To The Web Of Candle
 	      </h1> 
               <p class="wow fadeInUp" data-wow-delay=".6s">
                 Download our application for all free and premium features
@@ -365,7 +351,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
       <div class="container">
         <div class="row align-items-center">
           <div class="col-xl-6 col-lg-6">
-            <div class="about-content"> $phoneErr = 
+            <div class="about-content"> 
               <div class="section-title mb-30">
                 <h2 class="mb-25 wow fadeInUp" data-wow-delay=".2s">
                   Discover Our Unique
@@ -473,13 +459,10 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
  	   <span class="error"><br />
 	   <?php echo $mailErr; ?></span>	      
 	    </div>	
-	   <input
                 <button type="submit" value="Submit" class="main-btn btn-hover">
                   Subscribe
                 </button>
-	   />  	
 	      </form>
-            
           </div>
         </div>
       </div>
