--- a/index.html
+++ b/index.html
@@ -500,7 +500,12 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 		  placeholder="Enter Your Email"     
 	        />
  	   <span class="error"><br />
-	   <?php echo $mailErr; ?></span>	      
+	   <?php echo $mailErr; ?></span>
+		<input 
+		  type="textarea" 
+		  placeholder="Enter Your Feedback Or Suggestion (optional)"     
+	        />
+		      
 	    </div>	
                 <button type="submit" value="Submit" class="main-btn btn-hover">
                   Subscribe
