--- a/index.html
+++ b/index.html
@@ -505,9 +505,10 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 		  type="textarea" 
 		  placeholder="Enter Your Feedback Or Suggestion (optional)"     
 	        />
-		      
+		   
 	    </div>	
-                <button type="submit" value="Submit" class="main-btn btn-hover">
+                <button type="submit" value="Submit" class="main-btn btn-hover border-btn wow fadeInUp">
+		data-wow-delay=".6s
                   Subscribe
                 </button>
 	      </form>
