--- a/index.html
+++ b/index.html
@@ -506,10 +506,14 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 		  placeholder="Enter Your Feedback Or Suggestion (optional)"     
 	        />
 		   
-	    </div>	
-                <button type="submit" value="Submit" class="main-btn btn-hover border-btn wow fadeInUp">
-		data-wow-delay=".6s
-                  Subscribe
+	    </div>
+		<a
+                href="javascript:void(0)" onclick="alert('The Site Under Devolpment')"
+                class="main-btn border-btn btn-hover wow fadeInUp"
+                data-wow-delay=".6s"
+                > </a>
+                <button type="submit" value="Submit" class="btn-hover border-btn wow fadeInUp">
+                  Submit Now
                 </button>
 	      </form>
           </div>
